--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 
-## Ryan DeFever
-## Sarupria Research Group
+## Contributors: Ryan DeFever, Colin Targonski 
+## Sarupria Research Group, Smith Research Group
 ## Clemson University
-## 2019 Jun 10
+## 2019 Jun 22
 
 --------------------------------------------------
 ## REQUIREMENTS:  
