--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-## Contributors: Ryan DeFever, Colin Targonski 
+## Contributors: Ryan DeFever, Colin Targonski, Steven Hall 
 ## Sarupria Research Group, Smith Research Group
 ## Clemson University
 ## 2019 Jun 22
